Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm
@@ -802,6 +802,7 @@ void WebVideoFullscreenInterfaceAVKit::setupFullscreen(PlatformLayer& videoLayer
         [CATransaction begin];
         [CATransaction setDisableActions:YES];
         m_parentView = parentView;
+        m_parentWindow = parentView.window;
 
         if (!applicationIsAdSheet()) {
             m_window = adoptNS([[getUIWindowClass() alloc] initWithFrame:[[getUIScreenClass() mainScreen] bounds]]);
@@ -979,7 +980,8 @@ void WebVideoFullscreenInterfaceAVKit::cleanupFullscreen()
         if (m_window) {
             [m_window setHidden:YES];
             [m_window setRootViewController:nil];
-            [[getUIApplicationClass() sharedApplication] _setStatusBarOrientation:[[m_parentView window] interfaceOrientation]];
+            if (m_parentWindow)
+                [[getUIApplicationClass() sharedApplication] _setStatusBarOrientation:[m_parentWindow interfaceOrientation]];
         }
         [m_playerViewController setDelegate:nil];
         [[m_playerViewController view] removeFromSuperview];
@@ -996,6 +998,7 @@ void WebVideoFullscreenInterfaceAVKit::cleanupFullscreen()
         m_viewController = nil;
         m_window = nil;
         m_parentView = nil;
+        m_parentWindow = nil;
         
         WebThreadRun(^{
             if (m_fullscreenChangeObserver)
@@ -1026,6 +1029,7 @@ void WebVideoFullscreenInterfaceAVKit::invalidate()
     m_viewController = nil;
     m_window = nil;
     m_parentView = nil;
+    m_parentWindow = nil;
 }
 
 void WebVideoFullscreenInterfaceAVKit::requestHideAndExitFullscreen()
